syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 4685
// EnetChannelId: 0
// EnetIsReliable: true
message HomeAvatarCostumeChangeNotify {
	uint32 avatar_id = 5;
	uint32 costume_id = 9;
}
